--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
     <color name="yellow">#FFFF00</color>
-    <color name="blue">#0000FF</color>
+
     <color name="white">#FFFFFF</color>
+    <color name="blue">#1d9fdd</color>
+    <color name="black">#ff000000</color>
+    <color name="darkgrey">#ffa0a0a0</color>
+
+    <color name="main_bg">#f5f5f5</color>
 </resources>
