--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,4 +21,14 @@
       <item name="android:background">@android:color/transparent</item>
   </style>
 
+    <style name="switch_mode">
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/switch_mode</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
 </resources>
