主界面添加手势模式和鼠标模式导航

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -32,10 +32,10 @@
             />
     </LinearLayout>
 
-    <com.google.android.apps.tvremote.layout.SlidingLayout
+   <!-- <com.google.android.apps.tvremote.layout.SlidingLayout
         android:id="@+id/slider"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent" />-->
 
     <com.google.android.apps.tvremote.widget.SoftDpad
         android:layout_below="@id/title"
