--- a/res/drawable/dpad_selector.xml
+++ b/res/drawable/dpad_selector.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:drawable="@drawable/dpad" />
+  <item android:drawable="@drawable/new_dpad" />
 </selector>
