--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/MainScreen"
@@ -37,18 +37,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />-->
 
-    <com.google.android.apps.tvremote.widget.SoftDpad
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_below="@id/title"
-        app:radius_percent_ignore_touch="80"
-        app:radius_percent="70"
-        app:radius_percent_ok="8"
-        android:background="@android:color/transparent"
-        android:id="@+id/SoftDpad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/dpad_selector"
-        android:padding="16dp"
-        android:focusable="false" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
 
 </RelativeLayout>
