--- a/res/layout/new_main_touchpad_top.xml
+++ b/res/layout/new_main_touchpad_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res/com.google.android.apps.tvremote"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/MainScreen"
   android:keepScreenOn="true"
   android:layout_width="fill_parent"
