--- a/res/layout/softdpad.xml
+++ b/res/layout/softdpad.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
     <com.google.android.apps.tvremote.widget.SoftDpad
-        app:radius_percent_ignore_touch="80"
-        app:radius_percent="70"
-        app:radius_percent_ok="8"
-        android:background="@android:color/transparent"
         android:id="@+id/SoftDpad"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_height="450dp"
+        android:background="@android:color/transparent"
+        android:focusable="false"
         android:src="@drawable/dpad_selector"
-        android:padding="16dp"
-        android:focusable="false" />
-</FrameLayout>
+        app:radius_percent="70"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        app:radius_percent_ignore_touch="80"
+        app:radius_percent_ok="8"/>
+
+    <include
+        layout="@layout/common_key"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/SoftDpad"
+        />
+
+</RelativeLayout>
