--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="darkgrey">#ffa0a0a0</color>
 
     <color name="main_bg">#f5f5f5</color>
+
+    <!-- 底部背景 -->
+    <color name="bottom_bg">#1d92d5</color>
 </resources>
