--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -31,4 +31,12 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+
+    <style name="common_key">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+    </style>
 </resources>
