--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/switch_mode</item>
