更换鼠标模式背景图

--- a/res/layout/subview_touchpad.xml
+++ b/res/layout/subview_touchpad.xml
@@ -9,7 +9,7 @@
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_centerHorizontal="true"
-      android:background="@drawable/touchpad"/>
+      android:background="@drawable/mouse_bg"/>
 
   <ImageView
       android:id="@+id/touch_pad_arrow"
@@ -17,6 +17,6 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
-      android:src="@drawable/touchpad_icon"/>
+      android:src="@drawable/mouse_arrow"/>
 
 </RelativeLayout>
