--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,4 +14,7 @@
 
     <!-- 底部背景 -->
     <color name="bottom_bg">#1d92d5</color>
+
+    <!-- 顶部标题栏 -->
+    <color name="ldrawer_color">#FFFFFF</color>
 </resources>
