--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,4 +17,6 @@
 
     <!-- 顶部标题栏 -->
     <color name="ldrawer_color">#FFFFFF</color>
+    <color name="actionbar_color">#1d92d5</color>
+    <color name="drawer_arrow_second_color">#303f9f</color>
 </resources>
