--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <style name="Icon">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:scaleType">center</item>
-    <item name="android:background">@android:color/transparent</item>
-  </style>
 
-  <style name="TouchpadIcon">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:scaleType">center</item>
-  </style>
+    <style name="Icon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 
-  <!-- Style for the buttons on the end of the zoom bar -->
-  <style name="ZoomButton">
-      <item name="android:layout_width">62dp</item>
-      <item name="android:layout_height">62dp</item>
-      <item name="android:layout_centerHorizontal">true</item>
-      <item name="android:background">@android:color/transparent</item>
-  </style>
+    <style name="TouchpadIcon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:scaleType">center</item>
+    </style>
+
+    <!-- Style for the buttons on the end of the zoom bar -->
+    <style name="ZoomButton">
+        <item name="android:layout_width">62dp</item>
+        <item name="android:layout_height">62dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 
     <style name="switch_mode">
         <item name="android:layout_width">120dp</item>
@@ -29,7 +30,7 @@
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/switch_mode</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center</item>
     </style>
 
 
@@ -39,5 +40,21 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginBottom">15dp</item>
+    </style>
+
+    <!-- ActionBar-->
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/ActionBar</item>
+    </style>
+
+    <style name="ActionBar" parent="android:Widget.ActionBar">
+        <item name="android:background">@color/actionbar_color</item>
+        <item name="android:icon">@android:color/transparent</item>
+        <item name="android:titleTextStyle">@style/ActionBar.TitleText</item>
+    </style>
+
+    <style name="ActionBar.TitleText" parent="android:TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">18sp</item>
     </style>
 </resources>
