--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,4 +14,5 @@
 
     <!-- 侧滑栏宽度 -->
     <dimen name="navdrawer_width">260dp</dimen>
+    <dimen name="drawer_text_size">20sp</dimen>
 </resources>
