--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="actionbar_color">#1d92d5</color>
     <color name="drawer_arrow_second_color">#303f9f</color>
     <color name="drawer_divider_color">#e9e9e9</color>
+    <color name="drawer_text_color">#919191</color>
 </resources>
