--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -5,5 +5,12 @@
                 android:background="@drawable/new_tutorial"
     >
 
-
+    <Button
+        android:id="@+id/entry_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/entry_home"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
