--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <!-- 侧滑栏宽度 -->
     <dimen name="navdrawer_width">260dp</dimen>
     <dimen name="drawer_text_size">20sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
