--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,58 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:gravity="center_horizontal"
-  android:orientation="vertical">
-
-  <LinearLayout
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="6dip"
-    android:gravity="center">
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:editable="false"
-      android:layout_marginRight="10sp"
-      android:textSize="24sp"
-      android:textColor="@color/white"
-      android:text="@string/about_title" />
+    android:layout_height="fill_parent"
+    >
+
+
     <ImageView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/about_logo"/>
-  </LinearLayout>
+        android:id="@+id/about_top_img"
+        android:layout_width="wrap_content"
+        android:layout_height="160dp"
+        android:background="@drawable/about_top_img"
+        android:layout_alignParentTop="true"
+        />
 
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dip"
-    android:gravity="center">
     <TextView
-      android:id="@+id/version_text"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:editable="false"
-      android:textSize="18sp"
-      android:textColor="@color/white" />
-  </LinearLayout>
+        android:id="@+id/version_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/version"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/version_text_size"
+        android:layout_marginTop="120dp"
+        />
 
-  <Button
-    android:id="@+id/button_tos"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/about_button_tos" />
-  <Button
-    android:id="@+id/button_privacy"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/about_button_privacy_policy" />
-  <Button
-    android:id="@+id/button_tutorial"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/about_button_tutorial" />
+    <ListView
+        android:id="@+id/about_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:choiceMode="singleChoice"
+        android:divider="@color/drawer_divider_color"
+        android:dividerHeight="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/about_top_img"
+        >
 
-</LinearLayout>
+    </ListView>
+
+
+</RelativeLayout>
