--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="drawer_arrow_second_color">#303f9f</color>
     <color name="drawer_divider_color">#e9e9e9</color>
     <color name="drawer_text_color">#919191</color>
+
+    <!-- 关于 -->
+    <color name="about_text_color">#777777</color>
 </resources>
