--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="bottom_key_margin">10dp</dimen>
     <dimen name="switch_text_padding">20dp</dimen>
 
-    <!-- 顶部标题栏 -->
+    <!-- 顶部ActionBar -->
     <dimen name="ldrawer_drawableSize">50dp</dimen>
     <dimen name="ldrawer_barSize">18dp</dimen>
     <dimen name="ldrawer_topBottomBarArrowSize">11dp</dimen>
@@ -19,4 +19,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="version_text_size">20sp</dimen>
+
+    <dimen name="title_width">260dp</dimen>
+    <dimen name="title_height">50dp</dimen>
+    <dimen name="title_marginTop">10dp</dimen>
 </resources>
