--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,7 +9,10 @@
     <FrameLayout
         android:id="@+id/new_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:clipToPadding="false"
+        >
 
     </FrameLayout>
 
