--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,8 @@
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 
     <FrameLayout
@@ -27,7 +28,6 @@
         android:choiceMode="singleChoice"
         android:divider="@color/drawer_divider_color"
         android:dividerHeight="1dp"
-        android:drawSelectorOnTop="false"
         >
     </ListView>
 
