--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -2,9 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/tutorial"
+                android:fitsSystemWindows="true"
+                android:clipToPadding="false"
+
     >
 
+    <ImageView
+        android:id="@+id/about_top_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/tutorial"
+        android:layout_alignParentTop="true"
+        />
     <Button
         android:id="@+id/entry_button"
         android:layout_width="wrap_content"
