--- a/res/layout/activity_capture.xml
+++ b/res/layout/activity_capture.xml
@@ -13,17 +13,11 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center" />
 
-        <com.zxing.view.ViewfinderView
+        <com.winside.zxing.view.ViewfinderView
             android:id="@+id/viewfinder_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <include
-            android:id="@+id/include1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            layout="@layout/activity_title" />
     </RelativeLayout>
 
 </FrameLayout>
