--- a/res/layout/softdpad.xml
+++ b/res/layout/softdpad.xml
@@ -7,13 +7,12 @@
     <com.winside.tvremote.widget.SoftDpad
         android:id="@+id/SoftDpad"
         android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_height="@dimen/softdpad_height"
         android:background="@android:color/transparent"
         android:focusable="false"
         android:src="@drawable/dpad_selector"
         app:radius_percent="70"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:padding="16dp"
         app:radius_percent_ignore_touch="80"
         app:radius_percent_ok="8"/>
 
