--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -23,4 +23,6 @@
     <dimen name="title_width">260dp</dimen>
     <dimen name="title_height">50dp</dimen>
     <dimen name="title_marginTop">10dp</dimen>
+    <dimen name="title_padding">5dp</dimen>
+    <dimen name="softdpad_height">400dp</dimen>
 </resources>
