初步完成游戏的鼠标触摸模式

--- a/res/layout/handle_activity_mtouch.xml
+++ b/res/layout/handle_activity_mtouch.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/layout_mw_bg"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-
-                android:padding="0.0px">
+<RelativeLayout
+    android:id="@+id/game_mouse"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="0.0px">
     <!--android:background="@drawable/handle_img_mw_bg"-->
 
 
-    <ImageButton
-        android:id="@+id/imageButton_mw_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/handle_img_settingw_off"/>
 
+    <!--<com.winside.tvremote.widget.GameTouchMode
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/dpad_selector"
+            app:radius_percent="70"
+            app:radius_percent_ok="8"
+            />-->
 </RelativeLayout>
