--- a/res/layout/setting_item.xml
+++ b/res/layout/setting_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:minHeight="90dp"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:descendantFocusability="blocksDescendants"
+             android:minHeight="90dp"
     >
 
     <LinearLayout
         android:id="@+id/item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
+        android:orientation="vertical"
         >
 
         <TextView
@@ -38,10 +39,11 @@
         android:id="@+id/is_enable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/setting_checkbox"
-        android:button="@null"
         android:layout_gravity="right|center_vertical"
         android:layout_marginRight="15dp"
+        android:background="@drawable/setting_checkbox"
+        android:button="@null"
+        android:focusable="false"
         />
 
 </FrameLayout>
