--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:clipToPadding="false"
+                android:fitsSystemWindows="true"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context=".MainActivity">
 
-
-    <FrameLayout
-        android:id="@+id/new_container"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:fitsSystemWindows="true"
         >
 
-    </FrameLayout>
 
-    <!--侧滑菜单-->
-   <!-- <LinearLayout
-        android:id="@+id/drawer_linear"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#fff"
-        >-->
+        <FrameLayout
+            android:id="@+id/new_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:fitsSystemWindows="true"
+            >
+
+        </FrameLayout>
+
+        <!--侧滑菜单-->
+        <!-- <LinearLayout
+             android:id="@+id/drawer_linear"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_gravity="start"
+             android:background="#fff"
+             >-->
 
         <ListView
             android:id="@+id/navdrawer"
             android:layout_width="@dimen/navdrawer_width"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
             android:layout_gravity="left|start"
+            android:background="@android:color/white"
             android:choiceMode="singleChoice"
             android:divider="@color/drawer_divider_color"
             android:dividerHeight="1dp"
             >
         </ListView>
-    <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
 
-</android.support.v4.widget.DrawerLayout>
+    </android.support.v4.widget.DrawerLayout>
 
+</RelativeLayout>
