体感手柄模式全部改用Fragment形式，避免来回切换布局错乱情况

--- a/res/layout/handle_activity_mtouch.xml
+++ b/res/layout/handle_activity_mtouch.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/game_mouse"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="0.0px">
-    <!--android:background="@drawable/handle_img_mw_bg"-->
-
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/game_mouse"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:clipToPadding="false"
+                android:fitsSystemWindows="true"
+               >
 
     <!--<com.winside.tvremote.widget.GameTouchMode
             android:layout_width="fill_parent"
